Issue 6569 - Reverse update page columns on smaller screens

--- a/skin/updates.css
+++ b/skin/updates.css
@@ -221,7 +221,7 @@ html[dir="rtl"] .applestore-button
 {
   #container
   {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
 
